--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "gitlab利用webhooks自动部署",
   "main": "index.js",
   "scripts": {
+    "start": "pm2 run index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/JesseZhao1990/gitlab-webhooks#readme",
   "dependencies": {
-    "gitlab-webhook-handler": "^1.0.1"
+    "gitlab-webhook-handler": "^1.0.1",
+    "pm2": "^2.8.0"
   }
 }
