--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "gitlab利用webhooks自动部署",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 run index.js",
+    "start": "pm2 start index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
